+ delete and updated methods
